Fix bugs as followings: 1. Cancel submit style is not enabled when doing start on Mix. 2. Pressing clear would show the disabled block. 3. Background is visible during zoom in.
Former-commit-id: 615e6cf177f68edff06b024cb619a88681d37628

--- a/app/assets/stylesheets/tvwall.css
+++ b/app/assets/stylesheets/tvwall.css
@@ -86,7 +86,11 @@ a{ text-decoration:none; outline: none; /* for Firefox */  hlbr:expression(this.
 	background-color: rgb(60,60,60);	*/
 }
 .Zoom .GridMix{
-	background-color: black;
+	/*background-color: black;*/
+}
+
+.Zoom canvas[id^=_zoomTmp_]{
+	/*background-color: black;*/
 }
 
 .Content .box_a .GridMix .inner_metal,
